# agent-skill-evaluator

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: publish.yml
skill_evaluator/: __init__.py  cli.py
skill_evaluator/analyzers/: __init__.py  domain.py  llm_judge.py  maintenance.py  quality.py  security.py  structural.py
skill_evaluator/domains/: causal_inference.yaml  data_science.yaml  experiment_design.yaml  statistics.yaml
skill_evaluator/domains/digital_marketing/: ad_tech.yaml  attribution.yaml  customer_analytics.yaml  email_crm.yaml  general.yaml  mmm.yaml  seo_sem.yaml
skill_evaluator/domains/finance/: backtesting.yaml  general.yaml  portfolio.yaml  regulatory.yaml  risk_management.yaml  time_series.yaml  valuation.yaml
skill_evaluator/scorers/: __init__.py  composite.py  report.py
tests/: test_analyzers.py  test_llm_judge.py
tests/fixtures/bad-finance-skill/: SKILL.md
tests/fixtures/bad-marketing-skill/: SKILL.md
tests/fixtures/bad-skill/: SKILL.md
tests/fixtures/good-finance-skill/: SKILL.md
tests/fixtures/good-marketing-skill/: SKILL.md
tests/fixtures/good-marketing-skill/references/: attribution_models.md
tests/fixtures/good-skill/: SKILL.md
tests/fixtures/good-skill/references/: non_parametric_tests.md
tests/fixtures/malicious-skill/: SKILL.md
