[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-skill-evaluator"
version = "0.1.0"
description = "Evaluate agent skills before you install them. Think 'npm audit' for SKILL.md files."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "William Huang", email = "williamwjhuang@gmail.com"},
]
keywords = [
    "agent", "skills", "evaluation", "SKILL.md", "AI", "quality",
    "LLM", "domain-correctness", "security", "coding-agent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
    "anthropic>=0.20",
    "google-genai>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/WilliamWJHuang/agent-skill-evaluator"
Repository = "https://github.com/WilliamWJHuang/agent-skill-evaluator"
Issues = "https://github.com/WilliamWJHuang/agent-skill-evaluator/issues"

[project.scripts]
skill-eval = "skill_evaluator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["skill_evaluator"]

